bootstrap/node-config/components/dashboard/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bms-dashboard
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"mqtt2ws"}]'
  labels:
    app: bms-dashboard
    app.kubernetes.io/component: bms-dashboard
    app.kubernetes.io/instance: bms-dashboard
    app.kubernetes.io/name: bms-dashboard
    app.kubernetes.io/part-of: bms-dashboard
    app.openshift.io/runtime: angularjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bms-dashboard
  template:
    metadata:
      labels:
        app: bms-dashboard
        deployment: bms-dashboard
    spec:
      containers:
        - name: bms-dashboard
          image: 'quay.io/oschneid/chatbot:1.0'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /opt/app-root/src/assets/config.json
              name: dashboard-cfg-vol
              subPath: config.json
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 438
            name: bms-dashboard-config
          name: dashboard-cfg-vol
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
