bootstrap/node-config/components/dashboard/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bms-dashboard
  labels:
    app: bms-dashboard
    app.kubernetes.io/component: bms-dashboard
    app.kubernetes.io/instance: bms-dashboard
    app.kubernetes.io/name: bms-dashboard
    app.kubernetes.io/part-of: bms-dashboard
spec:
  to:
    kind: Service
    name: bms-dashboard
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
